test/errors/expr_lambda_async_comprehension_in_async_function.py
async def f(it):
    g = lambda: [x async for x in it]
