test/errors/expr_lambda_async_comprehension_in_async_function.py.expected
test/errors/expr_lambda_async_comprehension_in_async_function.py:2 error: asynchronous comprehension outside async function
